added basic html, will show page without styling

--- a/boring-lecture.html
+++ b/boring-lecture.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title>Boring Lecture</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-
+    <h1 class="intro">Welcome to Corporate</h1>
+    <img class="intro" src="https://www.pedestrian.tv/content/uploads/2018/04/office-space-636x397.jpg" alt="The boss from the movie 'Office Space'">
+    <h2 class="intro">What you need to know before "joining the team":</h2>
+    <p class="intro">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+    <p class="intro">Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+    <p class="intro">Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
   </body>
 </html>
